--- a/StockAnalyzer/src/app/app.component.html
+++ b/StockAnalyzer/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" ngClass="bg-picture">
+<div class="container" ngClass="bg-no-picture">
   <app-header></app-header>
   <router-outlet></router-outlet>
   <hr>
