--- a/StockAnalyzer/src/app/app.component.html
+++ b/StockAnalyzer/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container" ngClass="bg-no-picture">
   <app-header></app-header>
-  <router-outlet></router-outlet>
-  <hr>
-  <h3>Get Real Time Stock Details..</h3>
+  <div class="row">
+      <div class="col-md-8">
+        <router-outlet></router-outlet>
+      </div>
+      <div class="col-md-4">
+        <app-recentStock></app-recentStock>
+      </div>
+  </div>
 </div>
