Moved Recent Stock component inside stockExchange Component

--- a/StockAnalyzer/src/app/app.component.html
+++ b/StockAnalyzer/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container" ngClass="bg-no-picture">
   <app-header></app-header>
-  <div class="row">
+  <div class="row margin10">
       <div class="col-md-8">
         <router-outlet></router-outlet>
       </div>
       <div class="col-md-4">
-        <app-recentStock></app-recentStock>
+        <app-stockExchange></app-stockExchange>
       </div>
   </div>
 </div>
