--- a/StockAnalyzer/src/app/header/header.component.html
+++ b/StockAnalyzer/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="row width-100">
-        <div class="col-md-4">
+        <div class="col-md-8">
             <a class="navbar-brand" href="#">Stock Analyzer</a>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-4">
           
             <div *ngIf="stockInfoPageShown">
                 <form class="form-inline input-group">
-                  <input class="form-control search-field-right-space" type="search" placeholder="Search" aria-label="Search">
+                  <input class="form-control search-field-right-space" type="search" placeholder="Search Ticker" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
