--- a/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
+++ b/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
@@ -1,12 +1,13 @@
 <form (ngSubmit)="onSubmit()" #searchForm="ngForm">
-    <div class="pageCenterAlign container-md" >
-        <div class="row">
-            <div class="col-sm-8 form-group">
-                <input type="text" class="form-control border-curve" name="ticker" required maxlength="6" ngModel placeholder="Ticker Here">
-            </div>
-            <div class="col-sm-4">
-                <button class="btn btn-primary form-control border-curve" [disabled]="!searchForm.valid" type="submit">Find</button>
+    <div class="pageCenterAlign" >
+        <div class="row form-inline">
+            <div class="input-group col-md-12">
+                <input type="text" class="form-control border-curve removeRightBorderSettingsFromBootstrap" name="ticker" required maxlength="6" ngModel placeholder="Ticker Here">
+                <div class="">
+                    <button class="btn btn-primary form-control border-curve leftSpacing" [disabled]="!searchForm.valid" type="submit"> Search </button>
+                </div>
             </div>
         </div>
     </div>
 </form>
+
