--- a/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
+++ b/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
@@ -4,7 +4,7 @@
             <div class="input-group col-md-12">
                 <input type="text" class="form-control border-curve removeRightBorderSettingsFromBootstrap" name="ticker" required maxlength="6" ngModel placeholder="Ticker Here">
                 <div class="">
-                    <button class="btn btn-primary form-control border-curve leftSpacing" [disabled]="!searchForm.valid" type="submit"> Search </button>
+                    <button class="btn btn-outline-primary form-control border-curve leftSpacing" [disabled]="!searchForm.valid" type="submit"> Search </button>
                 </div>
             </div>
         </div>
