added dark green

--- a/StockAnalyzer/src/app/stockInfo/stockInfo.component.css
+++ b/StockAnalyzer/src/app/stockInfo/stockInfo.component.css
@@ -11,3 +11,11 @@
     font-weight: bold !important;
     margin-bottom: 30px;
 }
+
+.greenColor{
+    color: #093;
+}
+
+.redColor{
+    color:#FF0000;
+}
