Navbar header bold

--- a/StockAnalyzer/src/app/header/header.component.html
+++ b/StockAnalyzer/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="row width-100">
         <div class="col-md-7">
-            <a class="navbar-brand" routerLink='/searchTicker'>Stock Analyzer</a>
+            <a class="navbar-brand brandHeading" routerLink='/searchTicker'>Stock Analyzer</a>
         </div>
         <div class="col-md-5">
             <div *ngIf="stockInfoPageShown">
