--- a/StockAnalyzer/src/app/stockInfo/stockInfo.component.html
+++ b/StockAnalyzer/src/app/stockInfo/stockInfo.component.html
@@ -1,10 +1,11 @@
 <div class="tickerHeading">
-    <span>{{ currentTicker | uppercase }} - </span>
-    <span >{{ finalTickerPrice | twoDecimals | currency:USD }} </span>
-    <span *ngIf="green; else redRef">     
+    <span>{{ currentTicker | uppercase }} - {{ fullCompanyName }}  - </span>
+    <span *ngIf="green; else redRef">    
+        <span class="greenColor">{{ finalTickerPrice | twoDecimals | currency:USD }} </span> 
         <span class="greenColor">( {{ priceChange | twoDecimals }} %) </span>
     </span>
     <ng-template #redRef>
+        <span class="redColor">{{ finalTickerPrice | twoDecimals | currency:USD }} </span>
         <span class="redColor">( {{ priceChange | twoDecimals }} %) </span>
     </ng-template>
 </div>
