--- a/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
+++ b/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
@@ -1,9 +1,9 @@
 <form (ngSubmit)="onSubmit()" #searchForm="ngForm">
     <div class="pageCenterAlign" >
-        <div class="row form-inline">
-            <div class="input-group col-md-12">
-                <input type="text" class="form-control border-curve removeRightBorderSettingsFromBootstrap" name="ticker" required maxlength="6" ngModel placeholder="Ticker Here">
-                <div class="form-group leftSpacing">
+        <div class="row input-group form-inline">
+            <div class="input-group col-md-9">
+                <input type="text" class="form-control buttonShadow border-curve removeRightBorderSettingsFromBootstrap" name="ticker" required maxlength="6" ngModel placeholder="Ticker Here">
+                <!--<div class=" leftSpacing">
                     <select class="form-control" ngModel name="timeSeries" required>
                       <option value='TIME_SERIES_INTRADAY_1' >1 Day</option>
                       <option value='TIME_SERIES_INTRADAY_5'>5 Day</option>
@@ -13,10 +13,10 @@
                       <option value='TIME_SERIES_DAILY_12'>1 year</option>
                       <option value='TIME_SERIES_DAILY_60'>5 years</option>
                     </select>
-                  </div>
-                <div class="">
-                    <button class="btn btn-outline-primary form-control border-curve leftSpacing" [disabled]="!searchForm.valid" type="submit"> Search </button>
-                </div>
+                </div>-->
+            </div>
+            <div class="input-group col-md-3">
+                <button class="btn btn-primary buttonShadow form-control border-curve leftSpacing" [disabled]="!searchForm.valid" type="submit"> Search </button>
             </div>
         </div>
     </div>
