--- a/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
+++ b/StockAnalyzer/src/app/mainSearch/mainSearch.component.html
@@ -16,7 +16,7 @@
                 </div>-->
             </div>
             <div class="input-group col-md-3">
-                <button class="btn btn-primary buttonShadow form-control border-curve leftSpacing" [disabled]="!searchForm.valid" type="submit"> Search </button>
+                <button class="btn btn-primary buttonShadow form-control border-curve leftSpacing" type="submit"> Search </button>
             </div>
         </div>
     </div>
