--- a/StockAnalyzer/src/app/stockInfo/stockInfo.component.html
+++ b/StockAnalyzer/src/app/stockInfo/stockInfo.component.html
@@ -18,13 +18,13 @@
             <ng-template #chartReference>
                 <canvas id="canvas" >{{ chart }}</canvas>
                 <div class="btn-group float-right buttonGroupSpacing" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-secondary">1D</button>
-                    <button type="button" class="btn btn-secondary">5D</button>
-                    <button type="button" class="btn btn-secondary">1M</button>
-                    <button type="button" class="btn btn-secondary">3M</button>
-                    <button type="button" class="btn btn-secondary">6M</button>
-                    <button type="button" class="btn btn-secondary">1Y</button>
-                    <button type="button" class="btn btn-secondary">5Y</button>
+                    <button type="button" (click)="fetchStock('1D')" class="btn btn-secondary">1D</button>
+                    <button type="button" (click)="fetchStock('5D')" class="btn btn-secondary">5D</button>
+                    <button type="button" (click)="fetchStock('1M')" class="btn btn-secondary">1M</button>
+                    <button type="button" (click)="fetchStock('3M')" class="btn btn-secondary">3M</button>
+                    <button type="button" (click)="fetchStock('6M')" class="btn btn-secondary">6M</button>
+                    <button type="button" (click)="fetchStock('12M')" class="btn btn-secondary">1Y</button>
+                    <button type="button" (click)="fetchStock('60M')" class="btn btn-secondary">5Y</button>
                   </div>
             </ng-template>
         </div>
