--- a/StockAnalyzer/src/app/stockInfo/stockInfo.component.html
+++ b/StockAnalyzer/src/app/stockInfo/stockInfo.component.html
@@ -12,11 +12,13 @@
 <span>
     <div class="row stock-graph-size">
         <div class="col-md-12" style="display: block">
-            <div *ngIf="isLoading; else chartReference" class="spinner-border" role="status">
-                <span class="sr-only">Loading...</span>
+            <div  *ngIf="isLoading; else chartReference " class="stockChartDisplay">
+                <div  class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
             </div>
             <ng-template #chartReference>
-                <canvas id="canvas" >{{ chart }}</canvas>
+                <canvas id="canvas" class="stockChartDisplay" >{{ chart }}</canvas>
                 <div class="btn-group float-right buttonGroupSpacing" role="group" aria-label="Basic example">
                     <button type="button" (click)="fetchStock('1D')" class="btn btn-secondary">1D</button>
                     <button type="button" (click)="fetchStock('5D')" class="btn btn-secondary">5D</button>
